<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="5dp"
    app:cardBackgroundColor="@color/opaque_card"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/opaque_card">

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/City_Title"
            android:textSize="40sp"
            android:id="@+id/text_view_city_list_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_launcher_background"
            android:id="@+id/image_view_city_list_weather"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_view_city_list_name"/>

        <TextView
            android:id="@+id/text_view_city_list_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Temp"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_view_city_list_weather"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/text_view_city_list_temp_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_city_list_temp_low"
            app:layout_constraintStart_toEndOf="@+id/text_view_city_list_temp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/text_view_city_list_temp_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_city_list_temp"
            app:layout_constraintTop_toBottomOf="@id/text_view_city_list_temp_high" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>