<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/opaque_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/opaque_card">

        <TextView
            android:id="@+id/text_view_current_weather_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@id/image_view_current_weather_item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_current_weather_item_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/weather_01d"

            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/text_view_current_weather_item_temp"
            app:layout_constraintStart_toEndOf="@id/text_view_current_weather_item_date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_current_weather_item_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Temp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_view_current_weather_item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_current_weather_item_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_current_weather_item_date" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.58" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>