<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherAlert.WeatherAlertFragment"
    android:background="@color/opaque">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_card1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/opaque_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_weather_alerts_wind_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Wind"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@+id/wind_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/text_view_details_wind"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_details"
                    android:textSize="17sp"
                    android:id="@+id/text_view_details_wind"
                    app:layout_constraintBottom_toTopOf="@+id/wind_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_weather_alerts_wind_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/wind_14"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/wind_guideline" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/wind_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_card2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/opaque_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_weather_alerts_humidity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Humidity"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@+id/humidity_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/text_view_details_humidity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_details"
                    android:textSize="17sp"
                    android:id="@+id/text_view_details_humidity"
                    app:layout_constraintBottom_toTopOf="@+id/humidity_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_weather_alerts_humidity_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/humidity_icon_2048x1675_xxsge5os"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/humidity_guideline" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/humidity_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_card3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/opaque_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_weather_alerts_sunrise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sunrise"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@+id/sunrise_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/text_view_details_sunrise"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_details"
                    android:textSize="17sp"
                    android:id="@+id/text_view_details_sunrise"
                    app:layout_constraintBottom_toTopOf="@+id/sunrise_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_weather_alerts_sunrise_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/sunrise"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/sunrise_guideline" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sunrise_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_card4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/opaque_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_weather_alerts_pressure_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pressure"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@+id/pressure_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/text_view_details_pressure"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_details"
                    android:textSize="17sp"
                    android:id="@+id/text_view_details_pressure"
                    app:layout_constraintBottom_toTopOf="@+id/pressure_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_weather_alerts_pressure_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/science_pressure_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pressure_guideline" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/pressure_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_card5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/opaque_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_weather_alerts_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hourly"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@+id/details_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="15dp"/>

                <TextView
                    android:id="@+id/text_view_details_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hourly_details"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_weather_alerts_details_title"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_weather_alerts_details_title" />

                <ImageView
                    android:id="@+id/image_view_details_1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/transparent_hour_icon_free_png"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/image_view_details_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/details_guideline2" />

                <ImageView
                    android:id="@+id/image_view_details_2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/weather_01d"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_details_1"
                    app:layout_constraintTop_toTopOf="@+id/details_guideline2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/details_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/details_guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>